add new parameters for event
